# boinc-exporter

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README-ja.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
boinc_exporter/: boinc_client.py  collector.py  main.py
docs/: ERRORS.md
grafana/dashboards/: boinc.json
grafana/provisioning/dashboards/: provider.yml
tests/: test_boinc_client.py  test_collector.py  test_main.py
victoriametrics/: scrape.yml
