[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boinc-exporter"
version = "0.1.0"
description = "Prometheus/VictoriaMetrics exporter for BOINC"
requires-python = ">=3.11"
dependencies = [
    "prometheus-client>=0.20",
]

[project.scripts]
boinc-exporter = "boinc_exporter.main:main"

[tool.setuptools.packages.find]
include = ["boinc_exporter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["boinc_exporter"]
